
{{ $NEXT }}

    [ENHANCEMENTS]
    
    - references to global RegExp object replaced with references to constructor of regexp instance,
      to allow the advanced optimizations with Google Closure optimizer (thanks to: sirrobert)
      
    - now its possible to inherit from non-Joose superclasses 
        (see http://openjsan.org/go/?l=Joose.Manual.Classes for details)
    
    - starting from this release, Joose will be also distributed via the `npm` package manager
    
    - updated Joose.Manual.Installation entry
    
    [API CHANGES]

    -none-

    
    [BUG FIXES]
    
    - fixed bug, when calling `Module` over previously declared class didn't trigger a call to `body` 
    
    
3.010     2010-07-05 19:01

    [ENHANCEMENTS]
    
    - platform detection made exception-less
    
    - test suite is now passing on the NodeJS platform (has been adapted to recent changes Test.Run)
    
    [API CHANGES]

    -none-

    
    [BUG FIXES]
    
    - fixed bug, when aliases for static methods could be messed up during class mutation

3.009     2010-06-22 19:21

    [ENHANCEMENTS]
    
    - switched to Dist::Zilla for distribution management
    
    - some speed up of the core PropertySet iterators
    
    - if any value gets returned from `initialize` method, it gets returned as the result of the constructor,
      otherwise the instance itself is returned
      
    - added 'beforeConsumedBy' hook, allowing the property sets to act somehow before being consumed
    
    [API CHANGES]

    -none-

    
    [BUG FIXES]
    
    -none-


3.008   Thu, May 13, 2010

    [ENHANCEMENTS]
    
    - added ability to prefix the namespace declaration with '.' which will switch the current namespace to global
    
    - added ability to specify VERSION and AUTHORITY builders (AUTHORITY is reserved for future use with Jx.N.D)

    - added NodeJS detection

    - exporting created constructors to global NodeJS scope
    
    [API CHANGES]

    -none-
    
    