@@ -57,6 +57,7 @@ main = lib/Task/Joose/Core
 
 ; releaser
 [JSAN::Upload]  ; just a no-op for now
+;[JSAN::NPM::Publish]    ; publish in `npm`
  
 ; after release
 [Git::Commit / Commit_Dirty_Files]
