@@ -158,12 +158,18 @@ on Linux systems, or
 
 on Windows systems.
 
+
+### 4.1 Accessing JSAN modules from browser
+
 As a convention, configure you local web server that way, that the url `http://localhost/jsan` 
 will point at the `lib` subdirectory of JSAN library: `/usr/local/lib/jsan/lib` for example.
 
 This way you can load any installed JSAN module via url like: `http://localhost/jsan/Useful/Module/Name.js`
 
-Additionally, you may want to include the path to JSAN library to the `NODE_PATH` enviroment variable:
+
+### 4.2 Accessing JSAN modules from NodeJS
+
+You may want to include the path to JSAN library to the `NODE_PATH` enviroment variable:
 
     export NODE_PATH=/usr/local/lib/jsan/lib
 
